--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": ">=8.2.0"
   },
   "author": "Open Wallet Stack",
-  "version": "5.0.0-beta.2",
+  "version": "0.0.1",
   "main": "./index.js",
   "repository": "git://github.com/owstack/btccore-node.git",
   "homepage": "https://github.com/owstack/btccore-node",
