--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "btccore-node",
-  "description": "Full node with extended capabilities using Btccore and Bitcoin Core",
+  "description": "A bitcioin Full node with extended capabilities using Btccore.",
   "engines": {
     "node": ">=8.2.0"
   },
-  "author": "Open Wallet Stack",
   "version": "0.0.1",
   "main": "./index.js",
   "repository": "git://github.com/owstack/btccore-node.git",
