--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "btccore-node": "./bin/btccore-node"
   },
   "scripts": {
-    "test": "mocha -R spec --recursive",
-    "jshint": "jshint --reporter=node_modules/jshint-stylish ./lib",
-    "coverage": "istanbul cover _mocha -- --recursive",
-    "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --recursive -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "test": "mocha -R spec --recursive"
   },
   "tags": [
     "bitcoin",
