--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "dependencies": {
     "async": "^2.5.0",
-    "bcoin": "bcoin-org/bcoin#57b98b2368c8106a9c215d73e40e1a7ae39042f3",
+    "bcoin": "1.0.0-beta.14",
     "bitcoind-rpc": "git://github.com/owstack/bitcoind-rpc.git",
     "btccore-lib": "git://github.com/owstack/btccore-lib.git",
     "btccore-p2p": "git://github.com/owstack/btccore-p2p.git",
