--- a/extra/compose/Dockerfile
+++ b/extra/compose/Dockerfile
@@ -8,6 +8,6 @@ RUN mkdir -p $BITCOIN_DATA && mkdir -p $CONFIG_DIR
 
 COPY default.bitcoin.conf $BITCOIN_DATA/bitcoin.conf
 COPY default.btc-node.json $CONFIG_DIR/btc-node.json
-COPY default.btc-node.conf $CONFIG_DIR/btc-node.conf
+COPY default.btc-node.conf $CONFIG_DIR/bitcoin.conf
 
 CMD ["echo","installed config files"]
