--- a/extra/compose/default.btc-node.conf
+++ b/extra/compose/default.btc-node.conf
@@ -6,6 +6,7 @@ spentindex=1
 zmqpubrawtx=tcp://bitcoin-core:28332
 zmqpubhashblock=tcp://bitcoin-core:28332
 rpcallowip=0.0.0.0/0
+rpcprotocol=http
 rpchost=bitcoin-core
 rpcuser=bitcoin
 rpcpassword=local321
