--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@owstack/btc-node",
   "description": "Bitcoin Core full node with extended capabilities.",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "./index.js",
   "repository": "git://github.com/owstack/btc-node.git",
   "homepage": "https://github.com/owstack/btc-node",
@@ -24,7 +24,9 @@
   ],
   "dependencies": {
     "@owstack/bitcoind-rpc": "^0.0.1",
+    "@owstack/btc-explorer-api": "0.0.3",
     "@owstack/btc-lib": "^0.0.3",
+    "@owstack/btc-wallet-service": "0.0.5",
     "async": "^2.5.0",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
